--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
     <string name="app_name">memo</string>
 
+    <string name="str_id">아이디</string>
     <string name="require_id">아이디 입력</string>
+    <string name="str_pw">비밀번호</string>
     <string name="require_pw">비밀번호 입력</string>
     <string name="id_error_info">특수문자는 사용할 수 없습니다.</string>
     <string name="auto_login">자동 로그인</string>
