2020. 07. 15 주홍민 - 오랜만에 코틀린 커밋...PagedList 사용해보는중..

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="str_pw">비밀번호</string>
     <string name="require_pw">비밀번호 입력</string>
     <string name="id_error_info">특수문자는 사용할 수 없습니다.</string>
-    <string name="auto_login">자동 로그인</string>
     <string name="str_login">로그인</string>
+    <string name="str_non_login">비 로그인</string>
 
     <string name="large_text">
         MIT License
