2020. 09. 30. 수정사항 - 갤러리 페이지 개선 - Dark Mode & Light Mode 에 따라서 UI 변경 처리 - 사용하지 않는 디렉토리 및 파일 삭제.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">memo</string>
+    <string name="str_ui_mode_changed_info">화면 스타일이 변경되어 앱 재실행 합니다.</string>
 
     <string name="str_id">아이디</string>
     <string name="require_id">아이디 입력</string>
