--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="str_title">제목</string>
     <string name="str_contents">내용</string>
     <string name="str_change">수정</string>
+    <string name="str_add">추가</string>
     <string name="str_add_photo">사진 추가</string>
     <string name="str_summit">전송</string>
     <string name="str_info_file_max_cnt">더이상 추가할수 없습니다.</string>
