2020. 11. 01. 수정사항 - 이미지 자세히 보기 추가 - RxJava 로직 개선.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,5 +75,8 @@
     <string name="str_left_root_tag">왼쪽 레이아웃</string>
     <string name="str_right_tag">오른쪽 이미지</string>
     <string name="str_right_root_tag">오른쪽 레이아웃</string>
+    <string name="title_activity_image_detail">FullscreenActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 
 </resources>
