--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,8 @@
     <string name="notification_channel_id">memo_channel_id</string>
     <string name="notification_channel_name">푸시 알림</string>
     <string name="notification_channel_description">푸시 알림 입니다.</string>
+    
+    <string name="str_memo_empty_info">추가된 메모가 없습니다.</string>
 
 
 </resources>
